# fiware-cloud-rendering-renderer

./: .gitignore  CMakeLists.txt  README.md
CloudRenderingPlugin/: CMakeLists.txt  CloudRenderingDefines.cpp  CloudRenderingDefines.h  CloudRenderingPlugin.cpp  CloudRenderingPlugin.h  CloudRenderingPluginApi.h  CloudRenderingPluginFwd.h  CloudRenderingProtocol.cpp  CloudRenderingProtocol.h  WebRTCClient.cpp  WebRTCClient.h  WebRTCMediaConstraints.h  WebRTCPeerConnection.cpp  WebRTCPeerConnection.h  WebRTCRenderer.cpp  WebRTCRenderer.h  WebRTCTundraCapturer.cpp  WebRTCTundraCapturer.h  WebRTCUtils.h  WebRTCVideoRenderer.cpp  WebRTCVideoRenderer.h  WebRTCWebSocketClient.cpp  WebRTCWebSocketClient.h
CloudRenderingPlugin/doc/: Doxyfile
CloudRenderingPlugin/doc/pages/: main-page.dox
